--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,19 +11,24 @@
     "generate-client": "openapi-ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
+    "@ant-design/plots": "^2.6.6",
     "@chakra-ui/react": "^3.8.0",
     "@emotion/react": "^11.14.0",
     "@tanstack/react-query": "^5.28.14",
     "@tanstack/react-query-devtools": "^5.74.9",
     "@tanstack/react-router": "1.19.1",
+    "antd": "^5.27.6",
     "axios": "1.9.0",
+    "dayjs": "^1.11.18",
     "form-data": "4.0.2",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "7.49.3",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
